data/derived/comb/progs/unify/prog4005.ml.out
Characters 1-2:
  (x 3)::[1;2;3];;
   ^
Error: This expression has type int list
       This is not a function; it cannot be applied.
